fixing some issues related to height viewport on mobile devices and ladscape mode, editing information website in HTML

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -72,10 +72,21 @@ section{
         margin-bottom: 3.2rem;
         text-transform: uppercase;
 
-        color: var(--h2-color);
-        font-size: 3.6rem;
         font-weight: 900;
-        
+        font-size: 3.6rem;
+
+        @media (max-width: 767px){
+            font-size: 2.6rem;
+            background-color: var(--bg-banner);
+            color: var(--bg-service) !important;
+            position: sticky;
+            top: 0;
+            z-index: 333;
+            height: 8.8rem;
+            display: grid;
+            place-items: center;
+        }
+
         span{
             font-weight: 600;
         }
@@ -96,15 +107,15 @@ header{
     transition: background-color 1s;
 
     .container{
-        padding: 3rem 12rem 3rem 12rem;
+        padding: 3rem 12rem;
         display: flex;
         justify-content: space-between;
         align-items: center;
 
         nav{
             display: grid;
-            grid-gap: 1.6rem;
             grid-template-columns: repeat(4, auto);
+            grid-gap: 1.6rem;
 
             @media (max-width: 767px){
                 display: none;
@@ -112,8 +123,9 @@ header{
 
             a{
                 color: inherit;
-                font-stretch: 2rem;
+                font-size: 2rem;
                 text-decoration: none;
+                padding: 0.5rem;
             }
         }
     }
@@ -128,13 +140,21 @@ main{
     section.banner{
         color: var(--font-color);
         position: relative;
-        min-height: 100vh;
+        min-height: 100dvh;
         display: flex;
         align-items: center;
-        background-image: url('../images/header.jpg');
         background-position: top right;
         background-size: cover;
-        
+        background-image: url('../images/header-md.jpg');
+
+        @media (min-width: 1024px) {
+            background-image: url('../images/header-lg.jpg');
+        }
+
+        @media (min-width: 1280px) {
+            background-image: url('../images/header.jpg');
+        }
+
         &:after {
             content: '';
             display: block;
@@ -180,6 +200,7 @@ main{
         background-color: var(--bg-services);
 
         .container{
+            position: relative;
             padding-top: 6.4rem;
             padding-bottom: 6.4rem;
 
@@ -215,9 +236,14 @@ main{
 
                     .content{
                         padding: 1.6rem;
-                        
+
+                        h3{
+                            margin-bottom: 1rem;
+                        }
+
                         p{
                             font-size: 1.4rem;
+                            line-height: 1.6;
                         }
                     }
                 }
@@ -268,11 +294,15 @@ main{
 
                     p{
                         font-size: 1.8rem;
-                        margin-bottom: 1.6rem;
+                        margin-bottom: 2rem;
 
                         @media (max-width: 1024px) {
                             font-size: 1.4rem;
                         }
+                    }
+
+                    .button{
+                        font-size: 1.5rem;
                     }
                 }
 
@@ -306,7 +336,7 @@ main{
                     background-image: url('../images/projects/6.jpg');
                 }
             }
-            
+
         }
 
         .center{
@@ -315,6 +345,7 @@ main{
     }
 
     .contact{
+        margin-top: 17.5rem;
         background-color: var(--bg-banner);
 
         .container{
